k8s/worker-deplyment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/

apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker

  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: dockenigma/multi-worker
